--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -26,33 +26,48 @@
     </style>
 
     <style name="btnFillStyle" parent="Widget.AppCompat.Button">
-        <item name="android:stateListAnimator">@null</item>
         <item name="android:textColor">?attr/btn_fill_textColor</item>
         <item name="textAllCaps">false</item>
+
+        <item name="android:stateListAnimator">@null</item>
+
+        <item name="android:paddingVertical">@dimen/btn_padding</item>
 
         <item name="android:background">@drawable/sh_button</item>
         <item name="android:backgroundTint">?attr/btn_fill_backgroundColor</item>
     </style>
 
     <style name="btnActiveStyle" parent="Widget.AppCompat.Button">
-        <item name="android:stateListAnimator">@null</item>
         <item name="android:textColor">?attr/btn_fillActive_textColor</item>
+        <item name="textAllCaps">false</item>
+
+        <item name="android:stateListAnimator">@null</item>
+
+        <item name="android:paddingVertical">@dimen/btn_padding</item>
 
         <item name="android:background">@drawable/sh_button</item>
         <item name="android:backgroundTint">?attr/btn_fillActive_backgroundColor</item>
     </style>
 
     <style name="btnSubStyle" parent="Widget.AppCompat.Button">
-        <item name="android:stateListAnimator">@null</item>
         <item name="android:textColor">?attr/btn_sub_textColor</item>
+        <item name="textAllCaps">false</item>
+
+        <item name="android:stateListAnimator">@null</item>
+
+        <item name="android:paddingVertical">@dimen/btn_padding</item>
 
         <item name="android:background">@drawable/sh_button</item>
         <item name="android:backgroundTint">?attr/btn_sub_backgroundColor</item>
     </style>
 
     <style name="btnSubActiveStyle" parent="Widget.AppCompat.Button">
-        <item name="android:stateListAnimator">@null</item>
         <item name="android:textColor">?attr/btn_subActive_textColor</item>
+        <item name="textAllCaps">false</item>
+
+        <item name="android:stateListAnimator">@null</item>
+
+        <item name="android:paddingVertical">@dimen/btn_padding</item>
 
         <item name="android:background">@drawable/sh_button</item>
         <item name="android:backgroundTint">?attr/btn_subActive_backgroundColor</item>
