--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,7 +13,11 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
 
+        <item name="android:fontFamily">@font/font</item>
+
         <!--    Button Color    -->
+        <item name="android:buttonStyle">@style/btnFillStyle</item>
+
         <item name="btn_fill_textColor">@color/white600</item>
         <item name="btn_fill_backgroundColor">@color/blue500</item>
         <item name="btn_fillActive_textColor">@color/white600</item>
@@ -23,5 +27,16 @@
         <item name="btn_sub_backgroundColor">@color/blue100</item>
         <item name="btn_subActive_textColor">@color/blue500</item>
         <item name="btn_subActive_backgroundColor">@color/blue200</item>
+
+        <item name="btn_unable_backgroundColor">@color/gray400</item>
+        <item name="btn_unable_textColor">@color/black200</item>
+
+
+        <!--    EditText Color    -->
+        <item name="editTextStyle">@style/edtStyle</item>
+
+        <item name="edt_textColor">@color/black200</item>
+        <item name="edt_backgroundColor">@color/white500</item>
+        <item name="edt_hintColor">@color/gray300</item>
     </style>
 </resources>
