--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -13,11 +13,13 @@
     <attr name="btn_subActive_textColor" format="color"/>
     <attr name="btn_subActive_backgroundColor" format="color"/>
 
-    <!--  EdtText color  -->
+    <attr name="btn_unable_backgroundColor" format="color"/>
+    <attr name="btn_unable_textColor" format="color"/>
+
+    <!--  EditText color  -->
+    <attr name="edt_backgroundColor" format="color"/>
+    <attr name="edt_textColor" format="color"/>
+    <attr name="edt_hintColor" format="color"/>
 
 
-
-    <attr name="inputBackgroundColor" format="color"/>
-
-    <attr name="toolbarBackgroundColor" format="color"/>
 </resources>
