--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".ui.main.MainActivity">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -56,6 +56,7 @@
                 android:text="Sub active" />
 
             <Button
+                android:id="@+id/btn_main_unable"
                 style="@style/btnUnableStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
