--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -22,4 +22,7 @@
     <attr name="edt_hintColor" format="color"/>
 
 
+    <declare-styleable name="Tag">
+        <attr name="title" format="string" />
+    </declare-styleable>
 </resources>
