--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,7 @@
             app:layout_constraintTop_toBottomOf="@+id/img_main_logo">
 
             <Button
+                android:id="@+id/btn_main_fill"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="12dp"
