--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <attr name="textColor" format="color"/>
+    <attr name="txtColor" format="color"/>
 
     <!-- Button color -->
     <attr name="btn_fill_textColor" format="color"/>
