--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,7 @@
                 android:text="Fill" />
 
             <Button
+                android:id="@+id/btn_main_fillActive"
                 style="@style/btnActiveStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
