--- a/app/src/main/res/layout/snackbar_bad.xml
+++ b/app/src/main/res/layout/snackbar_bad.xml
@@ -9,7 +9,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/blue100"
+        app:cardBackgroundColor="@color/red100"
         app:cardCornerRadius="10dp"
         >
 
@@ -25,7 +25,7 @@
                 android:layout_height="wrap_content"
 
                 android:text="이건 타이틀입니다."
-                android:textColor="@color/blue400"
+                android:textColor="@color/red300"
                 android:textSize="16sp"
                 android:textFontWeight="700"
 
@@ -54,7 +54,7 @@
                 android:layout_height="wrap_content"
 
                 android:text="액션버튼"
-                android:textColor="@color/blue500"
+                android:textColor="@color/red300"
                 android:textSize="16sp"
                 android:textFontWeight="700"
 
