--- a/app/src/main/res/layout/snackbar_good.xml
+++ b/app/src/main/res/layout/snackbar_good.xml
@@ -35,7 +35,7 @@
 
             <TextView
                 android:id="@+id/txt_goodSnackBar_message"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
 
                 android:text="이건 메시지입니다."
@@ -44,9 +44,12 @@
                 android:textFontWeight="500"
 
                 android:layout_marginTop="3dp"
+                android:layout_marginEnd="3dp"
 
                 app:layout_constraintTop_toBottomOf="@id/txt_goodSnackBar_title"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintEnd_toStartOf="@id/txt_goodSnackBar_actionBtn"
+                app:layout_constraintStart_toStartOf="parent"
+                />
 
             <TextView
                 android:id="@+id/txt_goodSnackBar_actionBtn"
