--- a/app/src/main/res/values-v28/themes.xml
+++ b/app/src/main/res/values-v28/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="btnFillStyle" parent="Widget.AppCompat.Button">
+    <style name="btn_fill_style" parent="Widget.AppCompat.Button">
         <item name="android:textColor">?attr/btn_fill_textColor</item>
         <item name="android:textFontWeight">600</item>
         <item name="textAllCaps">false</item>
