Main activity bnv icon

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,8 @@
             app:menu="@menu/menu_main"
 
             android:background="@color/white600"
+            app:itemIconTint="@drawable/se_main_bnv_color"
+            app:itemTextColor="@drawable/se_main_bnv_color"
 
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
