--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,21 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_main_home"
+        android:icon="@drawable/ic_bnv_home"
         android:title="홈" />
 
     <item android:id="@+id/menu_main_search"
+        android:icon="@drawable/ic_bnv_search"
         android:title="탐색"
         />
 
     <item android:id="@+id/menu_main_teamBuilding"
+        android:icon="@drawable/ic_bnv_team_building"
         android:title="팀빌딩"
         />
 
     <item android:id="@+id/menu_main_contest"
+        android:icon="@drawable/ic_bnv_contest"
         android:title="대회"
         />
 
     <item android:id="@+id/menu_main_more"
+        android:icon="@drawable/ic_bnv_more"
         android:title="더보기"
         />
 </menu>
