Signup ui refactoring

--- a/app/src/main/res/layout/fragment_email_and_password.xml
+++ b/app/src/main/res/layout/fragment_email_and_password.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="vm"
-            type="com.heechan.membeder.ui.register.RegisterViewModel" />
+            type="com.heechan.membeder.ui.signUp.SignUpViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
