--- a/app/src/main/res/navigation/nv_register.xml
+++ b/app/src/main/res/navigation/nv_register.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/emailAndPasswordFragment"
-        android:name="com.heechan.membeder.ui.register.EmailAndPasswordFragment"
+        android:name="com.heechan.membeder.ui.signUp.EmailAndPasswordFragment"
         android:label="fragment_email_and_password"
         tools:layout="@layout/fragment_email_and_password" >
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/professionFragment"
-        android:name="com.heechan.membeder.ui.register.ProfessionFragment"
+        android:name="com.heechan.membeder.ui.signUp.ProfessionFragment"
         android:label="fragment_profession"
         tools:layout="@layout/fragment_profession" >
         <action
@@ -25,7 +25,7 @@
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
-        android:name="com.heechan.membeder.ui.register.ProfileFragment"
+        android:name="com.heechan.membeder.ui.signUp.ProfileFragment"
         android:label="fragment_profile"
         tools:layout="@layout/fragment_profile" />
 </navigation>
