--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,8 +14,9 @@
         android:layout_height="match_parent"
         tools:context=".ui.login.LoginActivity">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/btn_login_submit"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
 
             android:text="로그인"
