Mein header custom

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -25,4 +25,9 @@
     <declare-styleable name="Tag">
         <attr name="title" format="string" />
     </declare-styleable>
+
+    <declare-styleable name="HeaderMain">
+        <attr name="menu1Icon" format="reference"/>
+        <attr name="menu2Icon" format="reference"/>
+    </declare-styleable>
 </resources>
