--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,6 +12,18 @@
         android:layout_height="match_parent"
         tools:context=".ui.main.HomeFragment">
 
+        <com.heechan.membeder.ui.view.header.MainHeader
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+
+            app:menu1Icon="@drawable/ic_send"
+            app:menu2Icon="@drawable/ic_bnv_fill_home"
+
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -31,6 +43,7 @@
             android:text="팀 생성 테스트"
 
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             />
 
