--- a/app/src/main/res/layout/view_header_main.xml
+++ b/app/src/main/res/layout/view_header_main.xml
@@ -10,10 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:background="@color/white500"
+        android:background="?attr/hd_backgroundColor"
 
         android:paddingHorizontal="14dp"
         android:paddingVertical="10dp"
+
+        android:layout_weight="1"
         >
 
         <ImageView
@@ -21,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:src="@drawable/ic_logo_header"
+            android:src="?attr/hd_main_logo"
 
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -35,6 +37,7 @@
             android:layout_height="wrap_content"
 
             android:src="@drawable/ic_bnv_fill_home"
+            android:tint="?attr/hd_item_color"
 
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -48,6 +51,7 @@
             android:layout_height="wrap_content"
 
             android:src="@drawable/ic_bnv_fill_home"
+            android:tint="?attr/hd_item_color"
 
             android:layout_marginEnd="10dp"
 
