--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -39,7 +39,10 @@
         <item name="edt_backgroundColor">@color/white500</item>
         <item name="edt_hintColor">@color/gray300</item>
 
-        <!--  CompoundButton  -->
+        <!--    Header Style    -->
+        <item name="hd_backgroundColor">@color/white500</item>
+        <item name="hd_main_logo">@drawable/ic_logo_header</item>
+        <item name="hd_item_color">#B7B7B7</item>
     </style>
 
     <style name="btn_fill_style" parent="Widget.AppCompat.Button">
